[gd_scene load_steps=5 format=3 uid="uid://cpm6h2k18n4vg"]

[ext_resource type="Script" uid="uid://dln3bmblcjmaj" path="res://src/TestCaseWindow/TestCaseWindow.gd" id="1_8fswb"]

[sub_resource type="ButtonGroup" id="ButtonGroup_8fswb"]
allow_unpress = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5xvs1"]
bg_color = Color(0.8784314, 0, 0.23921569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8fswb"]
bg_color = Color(0.17478809, 0.6229859, 0.39339644, 1)

[node name="TestCaseWindow" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8fswb")

[node name="ProjectWindow" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Toolbar" type="HSplitContainer" parent="ProjectWindow"]
layout_mode = 2

[node name="Left" type="HBoxContainer" parent="ProjectWindow/Toolbar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ProjectWindow/Toolbar/Left"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="TestCase" type="Label" parent="ProjectWindow/Toolbar/Left/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Test Case: <test case name>"
text_overrun_behavior = 4

[node name="TimeElapsed" type="Label" parent="ProjectWindow/Toolbar/Left/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "<time> elapsed"
text_overrun_behavior = 4

[node name="Right" type="HBoxContainer" parent="ProjectWindow/Toolbar"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="EndTesting" type="Button" parent="ProjectWindow/Toolbar/Right"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 35)
layout_mode = 2
text = "End Testing"

[node name="NextCase" type="Button" parent="ProjectWindow/Toolbar/Right"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 35)
layout_mode = 2
text = "Next Case"

[node name="TestContent" type="VBoxContainer" parent="ProjectWindow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StepContent" type="VBoxContainer" parent="ProjectWindow/TestContent"]
layout_mode = 2
size_flags_vertical = 6

[node name="StepActionLabel" type="Label" parent="ProjectWindow/TestContent/StepContent"]
layout_mode = 2
text = "Action:"

[node name="StepAction" type="Label" parent="ProjectWindow/TestContent/StepContent"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "<step contents>"
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="ProjectWindow/TestContent/StepContent"]
layout_mode = 2

[node name="StepExpResLab" type="Label" parent="ProjectWindow/TestContent/StepContent"]
layout_mode = 2
text = "Expected result:"

[node name="StepExpect" type="Label" parent="ProjectWindow/TestContent/StepContent"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "<step expectation>"
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="ProjectWindow/TestContent/StepContent"]
layout_mode = 2

[node name="StepActResLab" type="Label" parent="ProjectWindow/TestContent/StepContent"]
layout_mode = 2
text = "Actual result:"

[node name="StepActual" type="TextEdit" parent="ProjectWindow/TestContent/StepContent"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
wrap_mode = 1

[node name="HSeparator3" type="HSeparator" parent="ProjectWindow/TestContent/StepContent"]
layout_mode = 2

[node name="PassFailButtons" type="HBoxContainer" parent="ProjectWindow/TestContent/StepContent"]
layout_mode = 2
size_flags_horizontal = 8

[node name="StepNotEval" type="Button" parent="ProjectWindow/TestContent/StepContent/PassFailButtons"]
unique_name_in_owner = true
visible = false
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_8fswb")
text = "Not Evaluated"

[node name="StepFail" type="Button" parent="ProjectWindow/TestContent/StepContent/PassFailButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_5xvs1")
toggle_mode = true
button_group = SubResource("ButtonGroup_8fswb")
text = "Fail"

[node name="StepPass" type="Button" parent="ProjectWindow/TestContent/StepContent/PassFailButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_8fswb")
toggle_mode = true
button_group = SubResource("ButtonGroup_8fswb")
text = "Pass"

[node name="ProgressBar" type="HFlowContainer" parent="ProjectWindow/TestContent"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
alignment = 1

[node name="Navigation" type="HBoxContainer" parent="ProjectWindow/TestContent"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Previous" type="Button" parent="ProjectWindow/TestContent/Navigation"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 35)
layout_mode = 2
text = "◀"

[node name="StepNum" type="Label" parent="ProjectWindow/TestContent/Navigation"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Step <i> of <n>"
horizontal_alignment = 1

[node name="Next" type="Button" parent="ProjectWindow/TestContent/Navigation"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 35)
layout_mode = 2
text = "▶"
